re-styled menu with bootstrap

--- a/menu.html
+++ b/menu.html
@@ -28,42 +28,140 @@
         <!--Navigation-->  
     <nav class="navbar navbar-expand-lg  navbar-light">
         <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+           <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+              <span class="navbar-toggler-icon"></span>
+           </button>
         <div class="collapse navbar-collapse" id="collapse_target">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item ">
-            <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="menu.html">Menu <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-        </li>
-        </ul>
-    </div>
+           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item ">
+                  <a class="nav-link" href="index.html">Home</a>
+              </li>
+               <li class="nav-item">
+                  <a class="nav-link active" href="menu.html">Menu <span class="sr-only">(current)</span></a>
+             </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact Us</a>
+             </li>
+          </ul>
+       </div>
     </nav>
     </header>
 
         <!--Menu/Gallery-->
-    <section id="menu">
-    <div class="menu-item">
-        <img src="assets/images/eba-min.jpg" alt="eba"><p>Eba</p>
-        <img src="assets/images/bangaa-min.jpg" alt="banga"><p>Banga Soup</p>
-        <img src="assets/images/amala-min.jpg" alt="amala"><p>Amala</p>
-        <img src="assets/images/Efo-Riro-min.jpg" alt="efo"><p>Efo</p>
-        <img src="assets/images/fried.rice-min.jpg" alt="fried-rice"><p>Fried Rice</p>
-        <img src="assets/images/isiew-min.jpg" alt="isiewu"><p>Isiewu</p>
-        <img src="assets/images/jollof-min.jpg" alt="jollof"><p>Jollof Rice</p>
-        <img src="assets/images/Iyan-min.jpg" alt="pounded-yam"><p>Pounded Yam</p>
-        <img src="assets/images/moi-moi-min.jpg" alt="moi-moi"><p>Moi Moi</p>
-        <img src="assets/images/ofada-min.jpg" alt="ofada"><p>Ofada Rice</p>
-        <img src="assets/images/asaro-min.jpg" alt="asaro"><p>Asaro</p>
-        <img src="assets/images/okro-min.jpg" alt="okro"><p>Okro</p>
-        <img src="assets/images/egusi-min.jpg" alt="egusi"><p>Egusi</p>
-        <img src="assets/images/pepper-soup-min.jpg" alt="pepper-soup"><p>Pepper Soup</p>
+        <section>
+            <div class="row menu">  
+             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/bangaa-min.jpg" alt="banga">
+                <div class="card-body">
+                    <h6 class="card-text">Banga Soup</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/amala-min.jpg" alt="amala">
+                <div class="card-body">
+                    <h6 class="card-text">Amala</h6>
+                </div>
+            </div>
+        </div> 
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/fried.rice-min.jpg" alt="fried-rice">
+                <div class="card-body">
+                    <h6 class="card-text">Fried Rice</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/isiew-min.jpg" alt="isiewu">
+                <div class="card-body">
+                    <h6 class="card-text">Isiewu</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/jollof-min.jpg" alt="jollof">
+                <div class="card-body">
+                    <h6 class="card-text">Jollof Rice</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/Iyan-min.jpg" alt="pounded-yam">
+                <div class="card-body">
+                    <h6 class="card-text">Pounded Yam</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/moi-moi-min.jpg" alt="moi-moi">
+                <div class="card-body">
+                    <h6 class="card-text">Moi Moi</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/ofada-min.jpg" alt="ofada">
+                <div class="card-body">
+                    <h6 class="card-text">Ofada Rice</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/asaro-min.jpg" alt="asaro">
+                <div class="card-body">
+                    <h6 class="card-text">Asaro</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/okro-min.jpg" alt="okro">
+                <div class="card-body">
+                    <h6 class="card-text">Okro</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/egusi-min.jpg" alt="egusi">
+                <div class="card-body">
+                    <h6 class="card-text">Egusi</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/pepper-soup-min.jpg" alt="pepper-soup">
+                <div class="card-body">
+                    <h6 class="card-text">Pepper Soup</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="card">
+                       <img class="class-img-top" src="assets/images/eba-min.jpg" alt="eba">
+                   <div class="card-body">
+                       <h6 class="card-text">Eba</h6>
+                   </div>
+                </div>
+            </div>
+             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/Efo-Riro-min.jpg" alt="efo">
+                <div class="card-body">
+                    <h6 class="card-text">Efo</h6>
+                </div>
+            </div>
+        </div>
     </div>
     </section>
 
